--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "expres": "^0.0.5",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "type": "module"
   }
 }
